styles: fix container overflow, header height, home title padding for phones

--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 20px 0px;
 
     .logo {
         @include textGradient();
